@@ -1,6 +1,7 @@
-Changes in QMPlay2 build 16.02.21:
+Changes in QMPlay2 build 16.03.03:
 	- fix slow seeking on some slow network streams,
 	- zero-copy demuxing and decoding (if possible),
+	- OpenGL 2 bugfix,
 
 Changes in QMPlay2 build 16.02.08:
 	- play multiple streams in FFmpeg, YouTube can play different audio/video streams together,
